sensord (0.6.35) unstable; urgency=low

  [Lihan Guo]
  * Combined listen and control session.

  [Shenghua Liu]
  * Seperate the old sensord fold to core and new sensord folders.

  [Antti Virtanen]
  * SocketHandler doesn't anymore delegate the work through QTimer if the data must be sent immediately.

 -- shenghua <ext-shenghua.1.liu@nokia>  Thu, 13 Jan 2011 13:29:01 +0200

sensord (0.6.34) unstable; urgency=low

  [Antti Virtanen]
  * propertyChanged signals aren't anymore sent through dbus to apps since qmSystem nor QtMob Sensors API supports property notifications. Fixes: NB#216173.
  * Refactored ALSAdaptorAscii: removed unnecessary members, fixed missing initializations and simplified the constructor.
  * Fixed fd leak from TouchAdaptor and did some minor refactorings.
  * Fixed memory leak and removed unnecessary members from OrientationChain.
  * NodeBase didn't initialize all members.
  * SysfsAdaptor leaked fd in case of error.
  * ProximitySensorChannelAdaptor::dataAvailable() now passes value by ref.
  * Minor refactoring to test cases.
  * Removed QThread::terminate() calls from testcases.

 -- Antti Virtanen <antti.i.virtanen@nokia.com>  Tue, 11 Jan 2011 19:16:14 +0200

sensord (0.6.33) unstable; urgency=low

  [Lihan Guo]
  * Calibration runs for 1 min after switch display on. Fixes: NB#197193.
  * Fixes: NB#202427

  [Timo Rongas]
  * Separated Position.Stable calculation from Screen.* calculations
  * Modified Position.Stable logic to subsample rate to 1hz and utilize
    timer for cases when dataflow stops.
  * Context Bins are connected / disconnected with start/stop to avoid
    useless propagation.
  * Fixes: NB#212767

  [Antti Virtanen]
  * Logger callpath optimized for cases when no logging happens due to too low log level.
    Check for deciding should something be logged or not is now inlined
    to make it as cheap as possible. Fixes: NB#194595.

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Fri, 17 Dec 2010 12:39:45 +0200
